MVのCSS途中まで

--- a/index.html
+++ b/index.html
@@ -8,22 +8,27 @@
 </head>
 
 <body>
-    <header>
-				<img src="img/logo.svg" alt="風と森の工務店">
-        <nav>
-            <ul>
-                <li><a href="#">募集職種</a></li>
-                <li><a href="#">わたしたちの想い</a></li>
-                <li><a href="#">会社について</a></li>
-                <li><a href="#">お知らせ</a></li>
-                <li><a href="#">エントリー</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-			<section class="main-visual">
-					<h1>家づくりの先の、<br>人の暮らしと未来をつくる</h1>
-					<a href="#">エントリー</a>
+	<main>
+		<section class="h-screen bg-cover bg-center bg-no-repeat bg-[url('img/mv.jpg')]">
+			<header>
+					<img src="img/logo.svg" alt="風と森の工務店">
+					<nav>
+							<ul>
+									<li><a href="#">募集職種</a></li>
+									<li><a href="#">わたしたちの想い</a></li>
+									<li><a href="#">会社について</a></li>
+									<li><a href="#">お知らせ</a></li>
+									<li><a href="#">エントリー</a></li>
+							</ul>
+					</nav>
+			</header>
+			<!-- <img src="img/mv.jpg" alt="家づくりの先の、人の暮らしと未来をつくる" class="absolute inset-0 w-full h-full object-cover"> -->
+
+			<div class="relative z-10">
+				<h1 class="text-4xl font-semibold text-white tracking-wider">家づくりの先の、<br>人の暮らしと未来をつくる</h1>
+				<a class="bg-[#007A88] text-base text-white px-4 py-2 rounded-full" href="#">エントリー</a>
+			</div>
+
 			</section>
 
 			<section class="position">
